# FAT16-block-device-reader

projekt2_5/: 2_5.c  CMakeLists.txt  file_reader.c  file_reader.h  makefile  tested_declarations.h  unit_test_v2.c
